[gd_scene load_steps=14 format=2]

[ext_resource path="res://Levels/Endless.gd" type="Script" id=1]
[ext_resource path="res://LiberationSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Patterns/RotatingLaser.tscn" type="PackedScene" id=3]
[ext_resource path="res://Patterns/ShadowClones.tscn" type="PackedScene" id=4]
[ext_resource path="res://Maps/Level.tscn" type="PackedScene" id=5]
[ext_resource path="res://Maps/Level2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Maps/Level3.tscn" type="PackedScene" id=7]
[ext_resource path="res://Maps/Level4.tscn" type="PackedScene" id=8]
[ext_resource path="res://Patterns/BulletRotation.tscn" type="PackedScene" id=9]
[ext_resource path="res://Other/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://Maps/Level5.tscn" type="PackedScene" id=11]
[ext_resource path="res://Other/font.tres" type="DynamicFont" id=12]

[sub_resource type="DynamicFont" id=1]
size = 300
font_data = ExtResource( 2 )

[node name="Endless" type="Node2D"]
script = ExtResource( 1 )
facts = PoolStringArray( "0 is a mediocre number and nobody really cares for it. It\'s a relatively recent invention and has received a 6.5 on IGN.", "1 was a prime number until 2006 when it was classified a \"dwarf prime.\"", "The ASCII code 2 denotes \"start of text\", which is pretty useless because you already know the text has started if it exists.", "The number 3 commonly has religious significance, which makes it particularly unpopular among atheists.", "4 bits is called a nybble, which is an incredibly cute name.", "Humans have 5 digits on each hand, and are also pretentious as hell, so they made their number system based on 5.", "The prefix version of the number six makes immature people laugh.", "Wikipedia claims there are 7 colors in a rainbow. Wikipedia sucks.", "The Stanley Parable 8 is a pretty terrible game.", "The number 9 is subject to lots of cannibalism.", "Every base is base 10 according to pedants.", "The Wikipedia page for the number 11 is known to cause existential dread:  https://qwantz.com/index.php\?comic=3900", "12 is a common number of angry people in film.", "Triskaidekaphobia is a word that means \"I\'m very pretentious and want to show this off by saying long words.\"", "Fourteen is 1110 in base two, pronounced \"one thousand, one hundred and ten...wait why didn\'t you tell me it was in binary\?\"", "You seem to be getting competent at the game. That\'s unfortunate for me because there\'s literally no content other than jumping around.", "16 is both 2^(2^2) and (2^2)^2 so you can\'t mess up your math if you forget how exponents work.", "17 is the most random number between 1 and 20. (alternate: 17 is the number for me / 17 is the number for me / 17 is the number for me / cause i\'ve got to believe)", "18 is the number of players on each team in Australian football, also known as \"too many players.\"", "19 would be a random number if it weren\'t real close to a round number.", "If you have 20 oranges, you can eat all of them and become very ill, preventing you from stacking them in an interesting way.", "21 is famously hard to calculate, as demonstrated in viral videos.", "22 is seven times pi if you\'re lazy in exactly the wrong way.", "23 may well be the least interesting number, although that makes it interesting in itself. dammit", "10^24 has the SI prefix \"yocto\" which was named so people don\'t take you seriously if you say it.", "25 is 9 plus 16 as proven by a very convoluted proof. However, it is easier to prove than 1+1=2.", "26 is the number of letters in the English alphabet after budget cuts removed ð, þ, and æ.", "27 oranges could be stacked in a 3*3*3 cube before it all comes crashing down, leaving you depressed and feeling like you have nothing to do with your life. Not recommended.", "28 is a perfect number, meaning that it has no flaws whatsoever and all numbers pale in comparison.", "February is the only month that doesn\'t always have 29 days.", "If you stack 30 oranges they\'ll all fall apart and you\'ll be very disappointed.", "Stop being good at the game or I\'ll actually have to keep making these. god", "If you get a 32 tile in 2048, you are officially in the 1st percentile of 2048 players. Great job. ", "After much research it has been concluded that 33 is a number.", "i\'m not gonna say it", "35 is the third number of the English alphabet.", "In Rhythm Tengoku there are 36 levels until the credits. Play Rhythm Tengoku now.", "37 is a random number according to RANDOM.ORG.", "38 is a budget random number but should only be used for emergencies.", "39 was thought to be a prime number until someone bothered to check it in 1937.", "At this point I can assume you found some way to cheat the game. How the hell did you get this far\? please tell me", "I\'m guessing you\'re using the fact that bullets won\'t spawn if you\'re close to where they would spawn (100px, specifically)", "What do you get when you multiply six by nine\?", "43 would be a pretty random number given that it\'s a prime, but it contains consecutive digits so it\'s not quite as random as the other ones. It\'s also pretty close to the center of numbers from 1 to 100 so people are unlikely to pick it.", "The number 44 is very content with its life due to a peculiar property of the squares of its digits.", "According to recent research, 45 is not equal to 4 * 5, contrary to popular belief.", "46 is 2/3 of a funny number.", "alright i gotta go get some groceries, see you soon.", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "hey i\'m back did i miss anything", "69 is 1.5 times the number of chromosomes in the human body.", "wait i forgot to buy Number Facts Volume 2 bye", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "ok i\'m back...wait a minute", "you\'re cheating i know it", "i\'m outta here" )
patterns = [ ExtResource( 9 ), ExtResource( 4 ), ExtResource( 3 ) ]
maps = [ ExtResource( 11 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="WaveTime" type="Label" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 0.0392157 )
custom_fonts/font = SubResource( 1 )
text = "5.5"
align = 1
valign = 1

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 48, 464 )

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="Level" type="Node2D" parent="."]

[node name="Patterns" type="Node2D" parent="."]

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Canvas"]
margin_left = 32.0
margin_top = 32.0
margin_right = 130.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 12 )
text = "your score is: "

[node name="Score" type="Label" parent="Canvas"]
margin_left = 128.0
margin_top = 32.0
margin_right = 168.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 12 )
text = "the number of seconds you have survived"

[node name="FunFact" type="Label" parent="Canvas"]
margin_left = 32.0
margin_top = 48.0
margin_right = 480.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 12 )
text = "nothing to see here"
autowrap = true

[node name="Label2" type="Label" parent="Canvas"]
margin_left = 512.0
margin_top = 512.0
margin_right = 896.0
margin_bottom = 592.0
custom_fonts/font = ExtResource( 12 )
text = "the bullets aren't supposed to be here, and neither is this text. afaict there's no convenient way to fix this so i guess this is here to stay."
autowrap = true

[node name="Label3" type="Label" parent="Canvas"]
margin_top = 480.0
margin_right = 148.0
margin_bottom = 511.0
custom_fonts/font = ExtResource( 12 )
text = "arrows to move
you can double jump"

[node name="ChangePattern" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="ChangePattern" to="." method="_on_ChangePattern_timeout"]
